--- a/socialmedia/templates/pages/post_detail.html
+++ b/socialmedia/templates/pages/post_detail.html
@@ -76,7 +76,7 @@
                     </a>
                   </li>
                   <li class="nav-item me-3 me-lg-0">
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="{% url 'social:chat' %}">
                       <i class="fas fa-comment text-dark"></i>
                     </a>
                   </li>
