--- a/socialmedia/templates/pages/home.html
+++ b/socialmedia/templates/pages/home.html
@@ -56,7 +56,7 @@
       </div>
       <div class="row mt-5">
         <div class="col-lg-12">
-          <img src="{% static 'images/profile-placeholder.png' %}"
+          <img src="{% static 'images/logo.png' %}"
                alt="User"
                class="img-fluid user-image" />
         </div>
